--- a/client/views/routes.html
+++ b/client/views/routes.html
@@ -63,7 +63,7 @@
                     <div class="item">
                         <label for="routeParent" translate>parent</label>
                         <select id="routeParent" class="dropdown__toggle line-input" ng-model="newRoute.parent"
-                            ng-options="route.id as route.name for route in routes | filter: {type: 'collection', id: newRoute.id ? '!' + newRoute.id : ''}">
+                            ng-options="route.id as route.name for route in routes | filter: {id: newRoute.id ? '!' + newRoute.id : ''}">
                             <option value=""></option>
                         </select>
                     </div>
