file structure cleaning

--- a/client/views/manager/info-carousel/info-carousel.html
+++ b/client/views/manager/info-carousel/info-carousel.html
@@ -2,7 +2,7 @@
     <div sd-carousel-step data-code="page1">
         <div class="sd-carousel__page-header">
         <h2 class="sd-carousel__page-heading">Create site wizard</h2>
-            <img class="sd-carousel__page-header-illustration" src="../images/carousel-01.png" alt="">
+            <img class="sd-carousel__page-header-illustration" src="./carousel-01.png" alt="">
         </div>
         <div class="sd-carousel__page-text">
             <h3>User wizard to create site and apply theme</h3>
@@ -15,7 +15,7 @@
     <div sd-carousel-step data-code="page2">
         <div class="sd-carousel__page-header sd-carousel__page-header--color-2">
             <h2 class="sd-carousel__page-heading">Add new site</h2>
-            <img class="sd-carousel__page-header-illustration" src="../images/carousel-02.png" alt="">
+            <img class="sd-carousel__page-header-illustration" src="./carousel-02.png" alt="">
         </div>
         <div class="sd-carousel__page-text">
             <h3>Step1: define your site</h3>
@@ -29,7 +29,7 @@
     <div sd-carousel-step data-code="page3">
         <div class="sd-carousel__page-header sd-carousel__page-header--color-3">
             <h2 class="sd-carousel__page-heading">Choose the theme</h2>
-            <img class="sd-carousel__page-header-illustration" src="../images/carousel-03.png" alt="">
+            <img class="sd-carousel__page-header-illustration" src="./carousel-03.png" alt="">
         </div>
         <div class="sd-carousel__page-text">
             <h3>Step2: Browse through available themes</h3>
@@ -42,7 +42,7 @@
     <div sd-carousel-step data-code="page4">
         <div class="sd-carousel__page-header sd-carousel__page-header--color-3">
             <h2 class="sd-carousel__page-heading">Install the theme</h2>
-            <img class="sd-carousel__page-header-illustration" src="../images/carousel-04.png" alt="">
+            <img class="sd-carousel__page-header-illustration" src="./carousel-04.png" alt="">
         </div>
         <div class="sd-carousel__page-text">
             <h3>Step3: Check theme details and install the theme</h3>
@@ -55,7 +55,7 @@
     <div sd-carousel-step data-code="page5">
         <div class="sd-carousel__page-header sd-carousel__page-header--color-3">
             <h2 class="sd-carousel__page-heading">Activate the theme</h2>
-            <img class="sd-carousel__page-header-illustration" src="../images/carousel-05.png" alt="">
+            <img class="sd-carousel__page-header-illustration" src="./carousel-05.png" alt="">
         </div>
         <div class="sd-carousel__page-text">
             <h3>Step4: Activate the theme</h3>
@@ -68,7 +68,7 @@
     <div sd-carousel-step data-code="page6">
         <div class="sd-carousel__page-header sd-carousel__page-header--color-3">
             <h2 class="sd-carousel__page-heading">Configure site or done</h2>
-            <img class="sd-carousel__page-header-illustration" src="../images/carousel-06.png" alt="">
+            <img class="sd-carousel__page-header-illustration" src="./carousel-06.png" alt="">
         </div>
         <div class="sd-carousel__page-text">
             <h3>Step5: Finish or continue configuring your site</h3>
