--- a/client/views/manager/index.html
+++ b/client/views/manager/index.html
@@ -26,7 +26,7 @@
 <section class="main-section master-desk-view">
     <div class="main-desk-container">
         <div class="desk-container" ng-repeat="site in sites | orderBy: 'name'">
-            <div class="desk" ng-include="'site.html'"></div>
+            <div class="desk" ng-include="'tenant.html'"></div>
         </div>
     </div>
     <a class="btn btn--sd-green btn--icon-only-circle btn--large sd-shadow--z4 absPosition absPosition--topRight" ng-click="webPublisher.toggleInfoCarousel()"><i class="icon-info-large"></i></a>
@@ -37,7 +37,7 @@
         <h3 class="panel-info__heading">No tenants so far.</h3>
         <p class="panel-info__description">To create a site click on the plus button to top right.</p>
     </div>
-    <div ng-include="'site-wizard.html'"></div>
+    <div ng-include="'wizard.html'"></div>
     <div ng-include="'info-carousel.html'"></div>
     <div ng-include="'manage-site.html'" ng-if="webPublisher.openSiteModal"></div>
 </section>
