--- a/client/views/manager/wizard/theme-details.html
+++ b/client/views/manager/wizard/theme-details.html
@@ -8,7 +8,7 @@
         ng-if="webPublisher.wizard.step=='details'">
         <div class="grid">
             <div class="grid__item grid__item--col-4">
-                <img class="wizardThemeBox__image" ng-if="!webPublisher.wizard.theme.screenshots[0] || !webPublisher.wizard.theme.screenshots[0].url" src="../images/no-theme-preview.png" />
+                <img class="wizardThemeBox__image" ng-if="!webPublisher.wizard.theme.screenshots[0] || !webPublisher.wizard.theme.screenshots[0].url" src="./no-theme-preview.png" />
                 <img class="wizardThemeBox__image" ng-if="webPublisher.wizard.theme.screenshots[0] && webPublisher.wizard.theme.screenshots[0].url" ng-src="{{webPublisher.wizard.theme.screenshots[0].url}}" />
                 <a class="btn btn--primary btn--large btn--expanded bottomMargin--10"
                 ng-click="webPublisher.siteWizardInstallTheme(webPublisher.wizard.theme)">Install</a>
