--- a/client/views/manager/wizard/wizard.html
+++ b/client/views/manager/wizard/wizard.html
@@ -61,7 +61,7 @@
                 <div class="flex-grid flex-grid--boxed flex-grid--wrap-items flex-grid--small-2">
                     <div class="flex-grid__item" ng-repeat="theme in webPublisher.wizard.organizationThemes">
                         <div class="wizardThemeBox sd-shadow--z1" ng-class="{'wizardThemeBox--active': webPublisher.wizard.theme && webPublisher.wizard.theme.active && webPublisher.wizard.theme.name == theme.name}">
-                            <img class="wizardThemeBox__image" ng-if="!theme.screenshots[0] || !theme.screenshots[0].url" src="../images/no-theme-preview.png" />
+                            <img class="wizardThemeBox__image" ng-if="!theme.screenshots[0] || !theme.screenshots[0].url" src="./no-theme-preview.png" />
                             <img class="wizardThemeBox__image" ng-if="theme.screenshots[0] && theme.screenshots[0].url" ng-src="{{theme.screenshots[0].url}}" />
                             <h4 class="wizardThemeBox__name">{{theme.title}}</h4>
                             <div class="wizardThemeBox__overlay">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-             <div ng-include="'site-wizard-theme-details.html'" ng-if="webPublisher.wizard.themeDetailsActive"></div>
+             <div ng-include="'theme-details.html'" ng-if="webPublisher.wizard.themeDetailsActive"></div>
             <div class="modal__footer"> 
                 <button class="btn btn--primary" ng-disabled="!webPublisher.wizard.ready"  ng-click="webPublisher.siteWizardConfigureSite()">Configure your site</button>
                 <button class="btn btn--hollow  btn--primary" ng-disabled="!webPublisher.wizard.ready" ng-click="webPublisher.toogleSiteWizard()">Done</button>
