--- a/client/views/manager/index.html
+++ b/client/views/manager/index.html
@@ -37,7 +37,7 @@
         <h3 class="panel-info__heading">No tenants so far.</h3>
         <p class="panel-info__description">To create a site click on the plus button to top right.</p>
     </div>
-    <div ng-include="'wizard.html'"></div>
+    <div sd-site-wizard data-active="webPublisher.siteWizardActive" data-manager-controller="webPublisher"></div>
     <div ng-include="'info-carousel.html'"></div>
     <div ng-include="'manage-site.html'" ng-if="webPublisher.openSiteModal"></div>
 </section>
