--- a/client/views/monitoring/list-item.html
+++ b/client/views/monitoring/list-item.html
@@ -25,42 +25,41 @@
                 ng-class="{'state-published': item.status == 'published', 'state-killed': item.status == 'unpublished'}">{{item.tenant.name}}
             </div>
         </div>
-
-        <div class="item-right toolbox">
-            <div class="dropdown flex-pull-right" dropdown dropdown-append-to-body>
-                <button class="dropdown__toggle" dropdown__toggle>
-                    <i class="icon-dots-vertical"></i>
-                </button>
-                <ul class="dropdown__menu">
-                    <li>
-                        <div class="dropdown__menu-label">
-                            Actions
-                            <button class="dropdown__menu-close"><i class="icon-close-small"></i></button>
-                        </div>
-                    </li>
-                    <li class="dropdown__menu-divider"></li>
-                    <li>
-                        <button ng-click="webPublisherMonitoring.openPublish(i, 'publish')">
-                            <i class="icon-expand-thin"></i>{{:: 'Publish'| translate}}
-                        </button>
-                    </li>
-                    <li ng-if="rootType != 'incoming'">
-                        <button ng-click="webPublisherMonitoring.openPublish(i, 'unpublish')">
-                            <i class="icon-expand-thin icon--rotate-180"></i>{{:: 'Unpublish'| translate}}
-                        </button>
-                    </li>
-                    <li ng-if="rootType == 'incoming'">
-                        <button ng-click="webPublisherMonitoring.editArticle(i)">
-                            <i class="icon-pencil"></i>{{:: 'Edit'| translate}}
-                        </button>
-                    </li>
-                    <li ng-if="rootType == 'incoming'">
-                        <button ng-click="webPublisherMonitoring.removeArticle(i)">
-                            <i class="icon-trash"></i>{{:: 'Remove'| translate}}
-                        </button>
-                    </li>
-                </ul>
-            </div>
+    </div>
+    <div class="item-right toolbox">
+        <div class="dropdown" dropdown dropdown-append-to-body>
+            <button class="dropdown__toggle" dropdown__toggle>
+                <i class="icon-dots-vertical"></i>
+            </button>
+            <ul class="dropdown__menu">
+                <li>
+                    <div class="dropdown__menu-label">
+                        Actions
+                        <button class="dropdown__menu-close"><i class="icon-close-small"></i></button>
+                    </div>
+                </li>
+                <li class="dropdown__menu-divider"></li>
+                <li>
+                    <button ng-click="webPublisherMonitoring.openPublish(i, 'publish')">
+                        <i class="icon-expand-thin"></i>{{:: 'Publish'| translate}}
+                    </button>
+                </li>
+                <li ng-if="rootType != 'incoming'">
+                    <button ng-click="webPublisherMonitoring.openPublish(i, 'unpublish')">
+                        <i class="icon-expand-thin icon--rotate-180"></i>{{:: 'Unpublish'| translate}}
+                    </button>
+                </li>
+                <li ng-if="rootType == 'incoming'">
+                    <button ng-click="webPublisherMonitoring.editArticle(i)">
+                        <i class="icon-pencil"></i>{{:: 'Edit'| translate}}
+                    </button>
+                </li>
+                <li ng-if="rootType == 'incoming'">
+                    <button ng-click="webPublisherMonitoring.removeArticle(i)">
+                        <i class="icon-trash"></i>{{:: 'Remove'| translate}}
+                    </button>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
