--- a/client/views/monitoring/list-item.html
+++ b/client/views/monitoring/list-item.html
@@ -11,7 +11,7 @@
     <div class="item-info">
         <div class="line">
             <span class="keyword">{{i.headline}}</span>
-            <span class="item-heading">{{i.description_text}}</span>
+            <span class="item-heading"></span>
             <time ng-if="i.updatedAt">{{i.updatedAt | reldate}}</time>
             <time ng-if="!i.updatedAt">{{i.createdAt | reldate}}</time>
         </div>
