SWP-1123: display primitive article statistics

--- a/client/views/monitoring/list-item.html
+++ b/client/views/monitoring/list-item.html
@@ -22,8 +22,12 @@
             <span class="container">{{i.route.name}}</span>
             <div ng-repeat="item in i.articles"
                 class="state-label flex-pull-right"
-                ng-class="{'state-published': item.status == 'published', 'state-killed': item.status == 'unpublished'}">{{item.tenant.name}}
-            </div>
+                ng-class="{'state-published': item.status == 'published', 'state-killed': item.status == 'unpublished'}">
+                {{item.tenant.name}}
+                <span sd-tooltip="impressions/page views" flow="left"
+                    ng-if="item.status != 'unpublished'">
+                    {{item.articleStatistics.impressionsNumber}}/{{item.articleStatistics.pageViewsNumber}}
+                </span>
         </div>
     </div>
     <div class="item-right toolbox">
