--- a/client/styles/_overwrites.scss
+++ b/client/styles/_overwrites.scss
@@ -60,3 +60,7 @@
     display: flex;
     flex-direction: column;
 }
+
+.compact-view .sp-list-item-view .media-box .item-info .state-label {
+    overflow: visible;
+}
