--- a/client/views/manager/manage-site/manage-site.html
+++ b/client/views/manager/manage-site/manage-site.html
@@ -2,6 +2,10 @@
     <div class="modal__header">
         <h3 class="modal__heading pull-left"><span translate>Manage:</span> <b>{{newSite.name}}</b></h3>
         <div class="pull-right">
+            <a class="btn btn--success" target="_blank"
+                ng-href="{{webPublisher.selectedSite.subdomain ? 'http://' + webPublisher.selectedSite.subdomain + '.' + webPublisher.selectedSite.domainName: 'http://' + webPublisher.selectedSite.domainName}}">
+                <i class="icon-globe"></i>{{ 'Open website' | translate }}
+            </a>
             <button class="btn" ng-click="webPublisher.toggleEditSite()" translate>Close</button>
             <button
                 class="btn"
