--- a/client/views/settings/rule-preview.html
+++ b/client/views/settings/rule-preview.html
@@ -1,7 +1,7 @@
 <div class="paneContent__header">
 	<h3 class="pull-left" translate>Rule preview</h3>
 	<div class="pull-right">
-		<div ng-click="webPublisherSettings.toggleCreateRule(false)"" class="close-filter">
+		<div ng-click="webPublisherSettings.toggleCreateRule(false)" class="close-filter">
             <i class="icon-close-small"></i>
         </div>
 	</div>
@@ -9,8 +9,22 @@
 <div class="paneContent__content contentPadding">
 	<h3>{{webPublisherSettings.selectedRule.name}}</h3>
 	<p>{{webPublisherSettings.selectedRule.description}}</p>
-
+	<span class="label label--primary rightSpace"
+		ng-repeat="part in webPublisherSettings.makeExpressionReadable(webPublisherSettings.selectedRule.expression)">
+		{{part}}
+	</span>
 	<p class="codeBlock">
 		{{webPublisherSettings.selectedRule.expression}}
 	</p>
+	<p>Send to:</p>
+	<span class="label label--primary"
+		ng-repeat="dest in webPublisherSettings.selectedRule.configuration.destinations">
+		{{webPublisherSettings.getTenantNameByCode(dest.tenant)}}
+	</span>
+	<span ng-if="webPublisherSettings.selectedRule.configuration.route" class="label label--success" ng-class="{'label--hollow' : !webPublisherSettings.selectedRule.configuration.published}">
+		{{webPublisherSettings.getRouteNameByTenantAndId(webPublisherSettings.selectedRule.tenantCode , webPublisherSettings.selectedRule.configuration.route)}}
+	</span>
+	<span ng-if="webPublisherSettings.selectedRule.configuration.fbia" class="label label--primary">
+		Facebook
+	</span>
 </div>
