--- a/client/views/settings/rules.html
+++ b/client/views/settings/rules.html
@@ -1,27 +1,58 @@
 <div class="subnav paneLayout">
-	<h3 class="subnav__page-title">Organization Rules</h3>
-	<button class="navbtn dropdown sd-create-btn" ng-click="webPublisherSettings.toggleCreateRule(true)">
-    	<i class="icon-plus-large"></i>
-        <span class="circle"></span>
-    </button>
+    <h3 class="subnav__page-title">Publishing Rules</h3>
+    <div class="dropdown dropdown--align-right dropdown--dropup" dropdown="">
+        <button class="navbtn dropdown sd-create-btn dropdown-toggle" dropdown__toggle="" aria-haspopup="true" aria-expanded="false">
+            <i class="icon-plus-large"></i>
+            <span class="circle"></span>
+        </button>
+        <ul class="dropdown__menu dropdown--align-right">
+            <li>
+                <div class="dropdown__menu-label">Create new rule</div>
+            </li>
+            <li class="dropdown__menu-divider"></li>
+            <li><button ng-click="webPublisherSettings.toggleCreateRule('organization')"><i class="icon-plus-sign icon--blue"></i>Organization Rule</button></li>
+            <li><button ng-click="webPublisherSettings.toggleCreateRule('tenant')" ng-disabled="!webPublisherSettings.organizationRules.length"><i class="icon-plus-sign icon--blue"></i>Tenant Rule</button></li>
+        </ul>
+    </div>
 </div>
-
+<div class="busyOverlay" ng-class="{'busyOverlay--active': busy}">
+    <span class="animate--rotate">
+        <i class="icon-refresh"></i>
+    </span>
+</div>
 <div class="paneLayout paneLayout--headerMargin">
     <div class="paneLayout__content">
-        <div class="contentPadding">
-            <ul class="treeList">
-                <li ng-repeat="rule in organizationRules track by $index"
+        <div class="panel-info" ng-if="!webPublisherSettings.organizationRules.length">
+            <div class="panel-info__icon">
+                <i class="big-icon--comments"></i>
+            </div>
+            <h3 class="panel-info__heading">No rules so far.</h3>
+            <p class="panel-info__description">Be the first one...</p>
+        </div>
+        <div class="contentPadding contentPadding--extraBottom"  ng-if="webPublisherSettings.organizationRules.length">
+            <div class="sd-list-header">
+                <span class="sd-list-header__name">Organization Rules</span>
+            </div>
+            <div ng-repeat="rule in webPublisherSettings.organizationRules track by $index"
+                ng-include="'settings/rule-item.html'">
+            </div>
+
+            <div ng-repeat="(code, rules) in webPublisherSettings.tenantsRules">
+                <div class="sd-list-header topMargin">
+                    <span class="sd-list-header__name">{{webPublisherSettings.getTenantNameByCode(code)}} Rules</span>
+                </div>
+                <div ng-repeat="rule in rules track by $index"
                     ng-include="'settings/rule-item.html'">
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="paneLayout__pane paneContent" 
+    <div class="paneLayout__pane paneContent"
     	ng-class="{'paneLayout__pane--open': webPublisherSettings.rulePaneOpen}"
-    	ng-include="'settings/rule-preview.html'" 
+    	ng-include="'settings/rule-preview.html'"
     	ng-if="!webPublisherSettings.isObjEmpty(webPublisherSettings.selectedRule)">
     </div>
-    <div class="paneLayout__pane paneContent" 
+    <div class="paneLayout__pane paneContent"
     	ng-class="{'paneLayout__pane--open': webPublisherSettings.rulePaneOpen}"
     	ng-include="'settings/rule-add.html'"
     	ng-if="webPublisherSettings.isObjEmpty(webPublisherSettings.selectedRule)">
