--- a/client/views/manager/manage-site/navigation-menu-tree.html
+++ b/client/views/manager/manage-site/navigation-menu-tree.html
@@ -25,8 +25,8 @@
             <h3 class="pull-left page-nav-title--text-light" ng-if="!webPublisher.isObjEmpty(webPublisher.selectedMenu)" translate>Edit Menu Item</h3>
             <div class="pull-right">
                 <button class="btn" ng-click="webPublisher.toogleCreateMenu(false)" translate>Cancel</button>
-                <button class="btn btn--primary" 
-                    ng-disabled="webPublisher.menuForm.$invalid || !webPublisher.menuForm.$dirty" 
+                <button class="btn btn--primary"
+                    ng-disabled="webPublisher.menuForm.$invalid || !webPublisher.menuForm.$dirty"
                     ng-click="webPublisher.saveMenu(webPublisher._refreshCurrentMenu)" translate>Save</button>
             </div>
         </div>
@@ -46,7 +46,7 @@
                     <div class="item">
                         <label for="menuParent" translate>parent</label>
                         <select id="menuParent" class="dropdown__toggle line-input" ng-model="newMenu.parent"
-                            ng-options="parent.id as parent.name for parent in menusInTree | filter: {id: (newMenu.id ? '!' + newMenu.id : '')}" required>
+                            ng-options="parent.id as parent.name for parent in menusInTree | filter: {id: (newMenu.id ? '!' + newMenu.id : '')}">
                             <option value=""></option>
                         </select>
                     </div>
@@ -54,14 +54,19 @@
                     <div class="item">
                         <label for="menuRoute" translate>route</label>
                         <select id="menuRoute" class="dropdown__toggle line-input" ng-model="newMenu.route"
-                            ng-options="route.id as route.name for route in routes">
+                            ng-options="route.id as route.name for route in routes"
+                            ng-required="!(newMenu.uri.length || newMenu.route)"
+                            ng-disabled="newMenu.uri.length">
                             <option value=""></option>
                         </select>
                     </div>
 
                     <div class="item">
                         <label for="menuUri" translate>uri</label>
-                        <input type="text" class="line-input" id="menuUri" ng-model="newMenu.uri">
+                        <input type="text" class="line-input" id="menuUri"
+                            ng-model="newMenu.uri"
+                            ng-required="!(newMenu.uri.length || newMenu.route)"
+                            ng-disabled="newMenu.route">
                     </div>
                 </fieldset>
             </form>
